fix overflox on mobile

--- a/css/main.sass
+++ b/css/main.sass
@@ -14,6 +14,8 @@ body
   background-repeat: no-repeat
   -webkit-transition: background-image 0.2s ease-in-out
   transition: background-image 0.2s ease-in-out
+
+html, body
   overflow-x: hidden
 
 .mt-20
@@ -69,8 +71,11 @@ iframe
 section a
   text-decoration: underline
 
+.site-wrapper
+  overflow-x: hidden
+  position: relative
+
 header
-  overflow: hidden
   height: 100vh
   color: white
   width: 100%
